[gd_scene load_steps=26 format=3 uid="uid://bw3o41ok1rphs"]

[ext_resource type="Shader" uid="uid://4g7jpwc60bou" path="res://Shader/ShaderMaterial.tres" id="1_pub40"]
[ext_resource type="Script" path="res://Script/Entity/Enemy/skeleton_archer.gd" id="1_tl3ie"]
[ext_resource type="Texture2D" uid="uid://drmqqcq6i448l" path="res://Assets/Entities/Skelee/Idle.png" id="2_aixpc"]
[ext_resource type="Texture2D" uid="uid://xx1v5q8wdw4g" path="res://Assets/Entities/Skelee/Bow.png" id="3_0t38a"]
[ext_resource type="Texture2D" uid="uid://cp1rc3uy30jf2" path="res://Assets/Entities/Skelee/Run.png" id="3_p2jyl"]
[ext_resource type="Texture2D" uid="uid://dlcojn842j1c8" path="res://Assets/Entities/Skelee/Death.png" id="4_8voit"]
[ext_resource type="PackedScene" uid="uid://cmisl0n0u57mt" path="res://Overlap/hurtbox.tscn" id="5_glf8r"]
[ext_resource type="AudioStream" uid="uid://dydp6p5pu5piq" path="res://Assets/BGM/SFX/Bow.mp3" id="8_6727r"]
[ext_resource type="AudioStream" uid="uid://cvp46tb1uixe6" path="res://Assets/BGM/SFX/Skeleton_Death.mp3" id="9_m5xfo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70i2a"]
shader = ExtResource("1_pub40")
shader_parameter/Enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7spgh"]
radius = 7.0
height = 18.0

[sub_resource type="Animation" id="Animation_mv20w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArmAim/Bow/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bow:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_egvdr"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArmAim/Bow/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bow:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1fv6f"]
_data = {
"RESET": SubResource("Animation_mv20w"),
"shoot": SubResource("Animation_egvdr")
}

[sub_resource type="Animation" id="Animation_vhkto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_omtx6"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rrih"]
_data = {
"RESET": SubResource("Animation_vhkto"),
"hurt": SubResource("Animation_omtx6")
}

[sub_resource type="Animation" id="Animation_fnbjf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_aixpc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArmAim/Bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Death:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xgayx"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_8voit")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArmAim/Bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Death:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tdcfh"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_aixpc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gxu0m"]
resource_name = "run"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_p2jyl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu24f"]
_data = {
"RESET": SubResource("Animation_fnbjf"),
"death": SubResource("Animation_xgayx"),
"idle": SubResource("Animation_tdcfh"),
"run": SubResource("Animation_gxu0m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc77c"]
size = Vector2(19, 30)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nakr"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ed0y"]
bg_color = Color(0.705882, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="enemy" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_70i2a")
collision_layer = 4
script = ExtResource("1_tl3ie")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -15)
texture = ExtResource("2_aixpc")
hframes = 4

[node name="ArmAim" type="Node2D" parent="."]

[node name="Bow" type="Node2D" parent="ArmAim"]
position = Vector2(14, 0)

[node name="Sprite2D" type="Sprite2D" parent="ArmAim/Bow"]
texture = ExtResource("3_0t38a")
hframes = 3

[node name="BulletPosition" type="Marker2D" parent="ArmAim"]
position = Vector2(21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_7spgh")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(80, 0)

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1fv6f")
}

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0rrih")
}

[node name="MovementAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wu24f")
}

[node name="Hurtbox" parent="." instance=ExtResource("5_glf8r")]
collision_layer = 4
collision_mask = 2
enemy_groups = Array[String](["blade"])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_kc77c")
debug_color = Color(0.996078, 0, 0.215686, 0.419608)

[node name="LifeBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(25, 0)
offset_left = -15.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = -16.0
theme_override_styles/background = SubResource("StyleBoxFlat_2nakr")
theme_override_styles/fill = SubResource("StyleBoxFlat_6ed0y")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="Bow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6727r")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_m5xfo")

[connection signal="hurt" from="Hurtbox" to="." method="_damage"]
